clusters/k3s/apps/downloads/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: qbittorrent
  namespace: docker-services
  labels:
    kubernetes.io/service-name: qbittorrent
addressType: IPv4
endpoints:
- addresses:
  - 192.168.1.40
ports:
- port: 8081
  protocol: TCP
